# proxy-pattern

./: LICENSE  README.md  main.py  pyproject.toml
bank_account/: bank_account.py  bank_account_protocol.py  positive_int.py  proxy_signal.py
